--- a/Listas/Lista08 - data bind/lista08/src/app/components/shared/navbar/navbar.component.html
+++ b/Listas/Lista08 - data bind/lista08/src/app/components/shared/navbar/navbar.component.html
@@ -1,4 +1,5 @@
 <div class="menu">
-  <a routerLink="/home">Home</a>
+  <a routerLink="/">Home</a>
   <a routerLink="/login">Login</a>
 </div>
+<hr>
